
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = licenses tmp full-text-index ea-index etagere rdfdb sane ferriscreate

SKEL_FILES = $(srcdir)/*.db $(top_builddir)/dot-ferris/*.xml
EXTRA_DIST = $(SKEL_FILES)
SKEL_INSTALL_DIR = @DOTFILE_ETC@/skel/.ferris

skeldir = $(SKEL_INSTALL_DIR)
skel_DATA = $(SKEL_FILES)


